<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="cursive"
        android:text="@string/appName"
        android:textSize="80dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="30dp"
        android:textSize="40dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:text="@string/username" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/edittext_background"
        android:hint="@string/username_instruction"
        android:gravity="center"
        android:autofillHints="Username" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_gravity="start"
        android:textSize="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password_instruction"
        android:inputType="text|textPassword"
        android:autofillHints="Password" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"
        android:textSize="20dp"
        android:layout_marginTop="20dp"/>
</LinearLayout>